# harbour-leyni

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md  harbour-bitvault.desktop  harbour-leyni.desktop  todo.md
.github/workflows/: api-tests.yml  crypto-tests.yml  release.yml  sfos-build.yml
dev/: README.md  docker-compose.yml
doc/: ARCHITECTURE.md  PLAN.md  PROTOCOL.md  TESTING.md
qml/: harbour-bitvault.qml
qml/cover/: CoverPage.qml
qml/pages/: EnablePinDialog.qml  FirstPage.qml  GeneratorDialog.qml  ItemDetailPage.qml  ItemEditPage.qml  LoginPage.qml  SettingsPage.qml  SetupPage.qml  TwoFactorPage.qml  UnlockPage.qml  VaultPage.qml
rpm/: harbour-bitvault.changes  harbour-bitvault.spec  harbour-leyni.changes  harbour-leyni.spec
src/: main.cpp
src/api/: CMakeLists.txt  apiclient.cpp  apiclient.h  apijson.cpp  apijson.h  serverconfig.cpp  serverconfig.h
src/crypto/: CMakeLists.txt  base64.cpp  base64.h  crypto.cpp  crypto.h  encstring.cpp  encstring.h  kdf.cpp  kdf.h  keys.cpp  keys.h  passwordgen.cpp  passwordgen.h  pinwrap.cpp  pinwrap.h  securebytes.cpp  securebytes.h  totp.cpp  totp.h
src/ui/: appcontroller.cpp  appcontroller.h
src/vault/: CMakeLists.txt  cipheritem.h  pinstore.cpp  pinstore.h  syncparser.cpp  syncparser.h  syncstore.cpp  syncstore.h  vault.cpp  vault.h  vaultmodel.cpp  vaultmodel.h
tests/: CMakeLists.txt  check.h  crypto_tests.cpp
tests/api/: api_integration_tests.cpp  api_unit_tests.cpp
tests/crypto/: base64_tests.cpp  encstring_tests.cpp  kdf_bounds_tests.cpp  main.cpp  passwordgen_tests.cpp  pinwrap_tests.cpp  rsa_tests.cpp  securebytes_tests.cpp  totp_tests.cpp  vector_tests.cpp
tests/fixtures/: README.md  generate_sync_fixture.cpp  sync.json
tests/vault/: vault_tests.cpp
translations/: harbour-bitvault.ts  harbour-leyni.ts
